# MimicMotion

./: .gitignore  buildozer.spec  environ.yaml  environment.yml  main.py  pyproject.toml  requirements.txt  scratch.py  setup_env.ps1
backend/: app.py
controllers/: main_controller.py
frontend/: __init__.py  main.py  mydb.db
frontend/controllers/: main_controller.py
frontend/java/: FaceMeshBridge.jv
frontend/screens/: bottombar.kv  camerascreen.kv  editprofilescreen.kv  landingscreen.kv  profilescreen.kv  progressoverviewscreen.kv  progressscreen.kv  signupscreen.kv  snapscreen.kv  snapshotscreen.kv  splashscreen.kv
frontend/services/: calculate.py  camera.py  config.py  db.py  kivy_setup.py  landmarks.py  midline.py  nodes.py  overlay.py  photo_storage.py  pipeline.py  session_manager.py
frontend/services/db/: __init__.py  migrations.py
frontend/services/methods/: __init__.py  blend.py  mesh.py  warp.py
frontend/src/: camera.py  landmarks.py  overlay.py  pipeline.py
p4a_recipes/mediapipe/: __init__.py
p4a_recipes/numpy/: __init__.py
p4a_recipes/opencv/: __init__.py
p4a_recipes/opencv/patches/: p4a_build.patch
src/: camera.py  config.py  landmarks.py  nodes.py  overlay.py  pipeline.py
