[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimicmotion"
version = "0.1.0"
description = "Kivy-based facial motion mirroring application"
requires-python = ">=3.10"
authors = [{ name = "RD7" }]
dependencies = [
    "kivy>=2.2.0"
]

[tool.setuptools.packages.find]
include = [
    "controllers",
    "controllers.*",
    "src",
    "src.*"
]
